ingress/preschool.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-preschool
spec: 
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: preschool
  template:
    metadata:
      name: preschool-pod
      labels:
        app: preschool
    spec:
      containers:
        - name: preschool-container
          image: shaikkhajaibrahim/preschool:1.1
          ports:
            - containerPort: 80
          resources:
            requests: 
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 128Mi
              cpu: 500m

---

apiVersion: v1
kind: Service
metadata: 
  name: preschool-svc
spec:
  selector:
    app: preschool
  ports:
    - port: 80
      targetPort: 80
