ingress/skate.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-skate
spec: 
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: skate
  template:
    metadata:
      name: skate-pod
      labels:
        app: skate
    spec:
      containers:
        - name: skate-container
          image: shaikkhajaibrahim/skateboard:1.0
          ports:
            - containerPort: 80
          resources:
            requests: 
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 128Mi
              cpu: 500m

---

apiVersion: v1
kind: Service
metadata: 
  name: skate-svc
spec:
  selector:
    app: skate
  ports:
    - port: 80
      targetPort: 80
